[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-toolbox"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "cssselect",
    "flask",
    "flask-admin>=1.5.5",
    "flask-migrate",
    "flask-sqlalchemy",
    "flask-wtf",
    "livereload",
    "lxml",
    "pyyaml>=6",
    "raven[flask]",
    "requests>=2.20.0",
    "sqlalchemy>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools]
packages = ["flask_toolbox"]
